Fix bug causing small vertical scroll due to question container too high

--- a/src/components/styles/question.css
+++ b/src/components/styles/question.css
@@ -28,13 +28,18 @@
 
 .currentQuestionContainer {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: space-around;
-  align-items: flex-end;
+  align-items: center;
 }
 .productQuestion,
 .progressionContainer p {
   font-size: 1.25rem;
+}
+
+.productQuestion {
+  text-align: center;
+  max-width: 40%;
 }
 .productQuestion,
 .productValue,
